# mscape-template

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  recommended-branch-protection.json
.github/: pull_request_template.md
.github/workflows/: docker.yml  test-build.yml
src/mscape_template/: mscape_script.py
tests/: test_functions.py
